// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-tag #render Should render 1 accent tag 1`] = `
<gux-tag accent="1">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-1 gux-size-small gux-emphasis-bold" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  <span slot="content">
    1 Accent
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render 2 accent tag 1`] = `
<gux-tag accent="2">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-2 gux-size-small gux-emphasis-bold" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  <span slot="content">
    2 Accent
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render 3 accent tag 1`] = `
<gux-tag accent="3">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-3 gux-size-small gux-emphasis-bold" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  <span slot="content">
    3 Accent
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render 4 accent tag 1`] = `
<gux-tag accent="4">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-4 gux-size-small gux-emphasis-bold" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  <span slot="content">
    4 Accent
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render 5 accent tag 1`] = `
<gux-tag accent="5">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-5 gux-size-small gux-emphasis-bold" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  <span slot="content">
    5 Accent
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render 6 accent tag 1`] = `
<gux-tag accent="6">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-6 gux-size-small gux-emphasis-bold" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  <span slot="content">
    6 Accent
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render 7 accent tag 1`] = `
<gux-tag accent="7">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-7 gux-size-small gux-emphasis-bold" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  <span slot="content">
    7 Accent
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render 8 accent tag 1`] = `
<gux-tag accent="8">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-8 gux-size-small gux-emphasis-bold" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  <span slot="content">
    8 Accent
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render 9 accent tag 1`] = `
<gux-tag accent="9">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-9 gux-size-small gux-emphasis-bold" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  <span slot="content">
    9 Accent
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render 10 accent tag 1`] = `
<gux-tag accent="10">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-10 gux-size-small gux-emphasis-bold" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  <span slot="content">
    10 Accent
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render basic tag 1`] = `
<gux-tag>
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-default gux-size-small gux-emphasis-bold" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  <span slot="content">
    Basic Tag
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render bold emphasis tag 1`] = `
<gux-tag emphasis="bold">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-default gux-size-small gux-emphasis-bold" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  <span slot="content">
    Bold Tag
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render default accent tag 1`] = `
<gux-tag accent="default">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-default gux-size-small gux-emphasis-bold" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  <span slot="content">
    default Accent
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render disabled removable tag 1`] = `
<gux-tag removable="" disabled="">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-default gux-disabled gux-size-small gux-emphasis-bold" aria-disabled="true">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        disabled tag with label:
      </div>
      <button class="gux-tag-remove-button" type="button" disabled="">
        <gux-icon class="gux-tag-remove-icon" icon-name="fa/xmark-large-regular" decorative="">
        </gux-icon>
        <gux-screen-reader-beta>
          Remove tag with label:
        </gux-screen-reader-beta>
      </button>
    </div>
  </template>
  <span slot="content">
    Disabled Removable Tag
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render disabled tag 1`] = `
<gux-tag disabled="">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-default gux-disabled gux-size-small gux-emphasis-bold" aria-disabled="true">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        disabled tag with label:
      </div>
    </div>
  </template>
  <span slot="content">
    Disabled Tag
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render inherit accent tag 1`] = `
<gux-tag accent="inherit">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-inherit gux-size-small gux-emphasis-bold" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  <span slot="content">
    inherit Accent
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render large removable tag with accent 1`] = `
<gux-tag size="large" removable="" accent="3">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-3 gux-size-large gux-emphasis-bold" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
      <button class="gux-tag-remove-button" type="button">
        <gux-icon class="gux-tag-remove-icon" icon-name="fa/xmark-large-regular" decorative="">
        </gux-icon>
        <gux-screen-reader-beta>
          Remove tag with label:
        </gux-screen-reader-beta>
      </button>
    </div>
  </template>
  <span slot="content">
    Large Removable Tag
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render large size tag 1`] = `
<gux-tag size="large">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-default gux-size-large gux-emphasis-bold" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  <span slot="content">
    Large Tag
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render removable tag 1`] = `
<gux-tag removable="">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-default gux-size-small gux-emphasis-bold" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
      <button class="gux-tag-remove-button" type="button">
        <gux-icon class="gux-tag-remove-icon" icon-name="fa/xmark-large-regular" decorative="">
        </gux-icon>
        <gux-screen-reader-beta>
          Remove tag with label:
        </gux-screen-reader-beta>
      </button>
    </div>
  </template>
  <span slot="content">
    Removable Tag
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render small size tag 1`] = `
<gux-tag size="small">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-default gux-size-small gux-emphasis-bold" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  <span slot="content">
    Small Tag
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render subtle emphasis removable tag 1`] = `
<gux-tag emphasis="subtle" removable="" accent="5">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-5 gux-size-small gux-emphasis-subtle" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
      <button class="gux-tag-remove-button" type="button">
        <gux-icon class="gux-tag-remove-icon" icon-name="fa/xmark-large-regular" decorative="">
        </gux-icon>
        <gux-screen-reader-beta>
          Remove tag with label:
        </gux-screen-reader-beta>
      </button>
    </div>
  </template>
  <span slot="content">
    Subtle Removable Tag
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render subtle emphasis tag 1`] = `
<gux-tag emphasis="subtle">
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-default gux-size-small gux-emphasis-subtle" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  <span slot="content">
    Subtle Tag
  </span>
</gux-tag>
`;

exports[`gux-tag #render Should render tag with long text 1`] = `
<gux-tag>
  <template shadowrootmode="open">
    <div class="gux-tag gux-accent-default gux-size-small gux-emphasis-bold" aria-disabled="false">
      <gux-tooltip-title>
        <span>
          <slot name="content" aria-hidden="true">
            <slot aria-hidden="true">
            </slot>
          </slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </template>
  <span slot="content">
    This is a very long tag text that might wrap or truncate
  </span>
</gux-tag>
`;
